--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/logo.jpg">
+    <link rel="shortcut icon" href="img/asds.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
     <title>Sriwijaya Conference</title>
@@ -21,8 +21,9 @@
     <nav class="navbar navbar-expand-lg sticky nav-color">
         <div class="navb">
             <!-- <img src="img/asds.png"> -->
-            <button class="navbar-toggler navbar-light bg-light" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler navbar-light bg-light" type="button" data-toggle="collapse"
+                data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -199,7 +200,7 @@
     <div class="bg-5">
         <div class="container">
             <div class="judull">
-                <h1>COMMMITEE</h1>
+                <h1>COMMITEE</h1>
             </div>
             <div class="row teks-3">
                 <div class="col-sm-6">
@@ -233,26 +234,58 @@
 
     <div class="bg-7">
         <div class="container">
+            <div class="row" id="content-2">
+                <div class="col-sm-7">
+                    <h3 id="judul">Contact person :</h3>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <ul>
+                                <h5>Registrasion</h5>
+                                <li>Dade Jubaedah (+62 899-9512-922)</li>
+                                <li>Thirtawati (+62 813-6838-3326)</li>
+                            </ul>
+                            <ul>
+                                <h5>Sponshorship</h5>
+                                <li>Sofia Sandi (62 813-8559-2910)</li>
+                                <li>Yulia Pujiastuti (+62 812-7842-874)</li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                            <ul>
+                                <h5>Publication</h5>
+                                <li>Sabri Sudirman +62 822-7289-5571)</li>
+                            </ul>
+                            <ul>
+                                <h5>Proceeding</h5>
+                                <li>Siti Hanggita (62 813-6971-3757</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-1"></div>
+                <div class="col-sm-4">
+                    <div class="logo">
+                        <div class="organizer">
+                            <h5>ORGANIZER</h5>
+                            <img src="logo/logo-unsri.png">
+                        </div>
+                        <div class="co-organizer">
+                            <h5>CO-ORGANIZER</h5>
+                            <img src="logo/charoen.png">
+                            <img src="logo/gpmt.png">
+                            <img src="logo/kasetsart.jpg">
+                            <img src="logo/murray.png">
+                            <img src="logo/upm.png">
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </div>
 
     <div class="bg-6">
         <div class="container-btn">
-            <!-- <div class="logo">
-                <div class="organizer">
-                    <p>ORGANIZER</p>
-                    <img src="logo/logo-unsri.png">
-                </div>
-                <div class="co-organizer">
-                    <p>CO-ORGANIZER</p>
-                    <img src="logo/charoen.png">
-                    <img src="logo/gpmt.png">
-                    <img src="logo/kasetsart.jpg">
-                    <img src="logo/murray.png">
-                    <img src="logo/upm.png">
-                </div>
-            </div> -->
             <p id="cp">&#169; 2021 Sriwijaya University</p>
         </div>
     </div>
