--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
                             <p>
                                 It is our great pleasure to welcome you Sriwijaya Conference on Sustainable
                                 Environment, Agriculture and Farming System (SAC-SAFSE). The
-                                Information is available at http://sac-safse.conf.unsri.ac.id. <br>
+                                Information is available at http://sac-safse.conf.unsri.ac.id. <br> <br>
                                 This conference is organized by Agriculture Faculty, Universitas Sriwijaya,
                                 Indonesia and co-organized by Kasetsart University, Thailand, The SACSAFSE will be held
                                 on
                                 September 29th, 2021 in Palembang, the largest and one
-                                of the most legendary cities in South of Sumatera, Indonesia. <br>
+                                of the most legendary cities in South of Sumatera, Indonesia. <br> <br>
                                 The objective of SAC-SAFSE is to present the latest state of the arts related to
                                 Sustainable Environment, Agriculture and Farming System. This conference
                                 provides opportunities exchange new ideas and experiences, to establish all
