--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         and Environment (SAC-SAFSE)</h3> <br>
                     <div class="row">
                         <div class="col-sm-4">
-                            <img class="d-block w-100" src="WhatsApp Image 2021-05-12 at 16.13.18.jpeg" alt="">
+                            <img class="d-block w-100" src="pamflet.jpeg" alt="">
                         </div>
                         <div class="col-sm-8">
                             <p>
